# projet-spark

./: .gitignore  README.md  app.py  config.py  docker-compose.yml  graph.py  graph_manager.py  index.html  main.py  pyproject.toml  spark_streaming.py  start.sh  test.py  test_batch_1.json  test_batch_2.json  test_graphframes.py  timer.py
checkpoints/c90156ce-5a63-4651-a932-6a1f621a5b7d/connected-components-d7dedd68/2/: .part-00000-3c87c6b1-9e96-42eb-bbff-5d72c94451a8-c000.snappy.parquet.crc  part-00000-3c87c6b1-9e96-42eb-bbff-5d72c94451a8-c000.snappy.parquet
dashboard/: README.md  index.html
graph/: graph.py  graph_store.py  index.html  schema.py  timer.py  utils.py
simulateur/: README.md  requirements.txt  simulateur.py
spark_streaming/: README.md  __init__.py  spark_streaming.py
