[project]
name = "projet-spark"
version = "0.1.0"
description = "Stream infinis pour un site type le bon coin"
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "delta-spark>=3.2.0",
    "faker>=40.23.0",
    "fastapi>=0.136.3",
    "flask>=3.1.3",
    "graphframes>=0.6",
    "kafka-python>=3.0.0",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyspark==3.5.1",
    "pyvis>=0.3.2",
    "uvicorn>=0.49.0",
]
